--- a/src/main/resources/org/example/kittyfy/AddNewSong.fxml
+++ b/src/main/resources/org/example/kittyfy/AddNewSong.fxml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="616.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.kittyfy.AddNewSongController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="616.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.kittyfy.AddNewSongController">
     <center>
         <VBox prefHeight="616.0" prefWidth="581.0" style="-fx-background-color: linear-gradient(to bottom, #FF8000, #FFB366);" BorderPane.alignment="CENTER">
             <children>
-                <TextField fx:id="songTitleTextField" maxHeight="45.0" maxWidth="343.0" prefHeight="45.0" prefWidth="325.0" promptText="Type Song title" VBox.vgrow="ALWAYS">
+                <TextField fx:id="songTitleTextField" maxHeight="45.0" maxWidth="343.0" prefHeight="42.0" prefWidth="391.0" promptText="Type Song title" VBox.vgrow="ALWAYS">
                     <VBox.margin>
                         <Insets left="130.0" top="30.0" />
                     </VBox.margin>
@@ -81,7 +78,7 @@
                   <Insets />
                </VBox.margin>
                 </HBox>
-                <ImageView fx:id="editPlaylistImage" fitHeight="188.0" fitWidth="353.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="editPlaylistImage" fitHeight="157.0" fitWidth="229.0" pickOnBounds="true" preserveRatio="true">
                     <VBox.margin>
                         <Insets left="130.0" />
                     </VBox.margin>
